--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,7 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+html, body .app{
+    height: 100vh;
+    background-image: url('https://images.unsplash.com/photo-1564749407128-05781e9b05be?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80');
+    padding: 1em;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
